syntax = "proto3";
package comdex.locker.v1beta1;

// import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
// import "cosmos/base/v1beta1/coin.proto";
import "comdex/locker/v1beta1/locker.proto";
import "comdex/locker/v1beta1/params.proto";


option go_package            = "github.com/comdex-official/comdex/x/locker/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

service QueryService {
  rpc QueryLockerInfo(QueryLockerInfoRequest) returns (QueryLockerInfoResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/lockerinfo/{id}";
  };
  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/params";
  }
}

message QueryLockerInfoRequest {
  string id = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryLockerInfoResponse {
  Locker lockerInfo = 1[
    (gogoproto.customname) = "LockerInfo",
    (gogoproto.moretags)   = "yaml:\"lockerInfo\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}
